Test 'F1DataSchedulerService'